# kendryte-standalone-sdk

./: .clang-format  .gitignore  .travis.yml  32x32.py  CHANGELOG.md  CMakeLists.txt  README.md  htpa_test.csv  kendryte-package.json  terminal.py
lib/: CMakeLists.txt
lib/bsp/: crt.S  entry_user.c  interrupt.c  locks.c  printf.c  sleep.c  syscalls.c
lib/bsp/config/: fpioa_cfg.c  fpioa_cfg.h
lib/bsp/include/: atomic.h  bsp.h  dump.h  encoding.h  entry.h  sleep.h  syscalls.h  util.h
lib/bsp/include/env/: encoding.h
lib/drivers/: aes.c  apu.c  audio_bf.c  clint.c  common.c  dmac.c  dvp.c  fft.c  fpioa.c  gpio.c  gpiohs.c  hard_fft.c  i2c.c  i2s.c  iomem.c  iomem_malloc.c  kpu.c  kpu.h  otp.c  plic.c  pwm.c  rtc.c  sha256.c  spi.c  sysclock.c  sysctl.c  timer.c  uart.c  uarths.c  utils.c  wdt.c
lib/drivers/include/: aes.h  apu.h  audio_bf.h  clint.h  common.h  dmac.h  dvp.h  fft.h  fpioa.h  gpio.h  gpio_common.h  gpiohs.h  hard_fft.h  i2c.h  i2s.h  iomem_malloc.h  kpu.h  otp.h  plic.h  pwm.h  rtc.h  sha256.h  spi.h  sysclock.h  sysctl.h  timer.h  uart.h  uarths.h  utils.h  wdt.h
lib/firmware/: lcd.c  nt35310.c  ov2640.c  ov5640.c  sd3068.c  w25qxx.c
lib/firmware/include/: lcd.h  nt35310.h  ov5640.h  ov5640cfg.h  sd3068.h  w25qxx.h
lib/freertos/: CMakeLists.txt  locks.c  tasks.c
lib/freertos/conf/: FreeRTOSConfig.h
lib/freertos/portable/: port.c
lib/math/: fastexp.c  fastexp.h
lib/nncase/: .clang-format  CMakeLists.txt  nncase.cpp
lib/nncase/include/: datatypes.h  io_utils.h  nncase.h  runtime_op_utility.h
lib/nncase/include/kernels/: kernel_utils.h  utils.h
lib/nncase/include/kernels/cpu/: cpu_kernels.h
lib/nncase/include/kernels/k210/: k210_kernels.h
lib/nncase/include/kernels/neutral/: neutral_kernels.h
lib/nncase/include/kernels/riscv/: neutral_kernels.h
lib/nncase/include/runtime/: binary_writer.h  interpreter.h  kernel_registry.h  model.h  runtime_op.def  runtime_op.h  runtime_op_utility.h  span_reader.h  target_config.h
lib/nncase/include/runtime/k210/: interpreter.h  k210_ops_body.h  k210_runtime_op_utility.h  k210_sim_types.h
lib/nncase/include/runtime/neutral/: neutral_ops_body.h
lib/nncase/include/targets/: node_body.h  target.h
lib/nncase/include/targets/cpu/: cpu_ops_body.h  interpreter.h
lib/nncase/include/targets/k210/: interpreter.h  k210_ops_body.h  k210_runtime_op_utility.h  k210_sim_types.h
lib/nncase/include/targets/neutral/: neutral_ops_body.h
lib/nncase/runtime/: interpreter.cpp  kernel_registry.cpp
lib/nncase/runtime/k210/: interpreter.cpp  k210_ops.cpp
lib/nncase/runtime/neutral/: neutral_ops.cpp
lib/nncase/targets/cpu/: cpu_ops.cpp
lib/nncase/targets/k210/: interpreter.cpp  k210_ops.cpp
lib/nncase/targets/neutral/: neutral_ops.cpp
lib/nncase/v0/: CMakeLists.txt  nncase_v0.cpp  nncase_v0.h
lib/nncase/v0/include/: datatypes.h  io_utils.h  quantize.h  target_config.h
lib/nncase/v0/include/kernels/: kernel_utils.h
lib/nncase/v0/include/kernels/cpu/: cpu_kernels.h
lib/nncase/v0/include/kernels/k210/: k210_kernels.h
lib/nncase/v0/include/kernels/riscv/: neutral_kernels.h
lib/nncase/v0/include/runtime/: binary_reader.h  binary_writer.h  interpreter.h  kernel_registry.h  model.h  nnil.h  node_body.h  runtime_op.h  runtime_op_utility.h  span_reader.h  target_interpreter.h
lib/nncase/v0/include/runtime/cpu/: cpu_ops_body.h  (+1 more)
lib/nncase/v0/include/targets/: target.h
lib/nncase/v0/runtime/: interpreter.cpp  kernel_registry.cpp
lib/nncase/v0/runtime/cpu/: cpu_ops.cpp
lib/nncase/v0/runtime/k210/: interpreter.cpp  k210_ops.cpp
lib/nncase/v1/: CMakeLists.txt  nncase_v1.cpp  nncase_v1.h
lib/nncase/v1/include/nncase/: version.h
lib/utils/include/: syslog.h
(+265 files in other folders)
