#project(freertos)

# create freertos library
FILE(GLOB_RECURSE LIB_SRC_NOASM
        "${CMAKE_CURRENT_LIST_DIR}/*.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/*.c"
        )

FILE(GLOB_RECURSE ASSEMBLY_FILES
        "${CMAKE_CURRENT_LIST_DIR}/*.s"
        "${CMAKE_CURRENT_LIST_DIR}/*.S"
        )
SET(LIB_SRC ${LIB_SRC_NOASM} ${ASSEMBLY_FILES})

SET(LIB_INC ${CMAKE_CURRENT_LIST_DIR}/include ${CMAKE_CURRENT_LIST_DIR}/conf ${CMAKE_CURRENT_LIST_DIR}/portable)

SET_PROPERTY(SOURCE ${ASSEMBLY_FILES} PROPERTY LANGUAGE C)
SET_SOURCE_FILES_PROPERTIES(${ASSEMBLY_FILES} PROPERTIES COMPILE_FLAGS "-x assembler-with-cpp -D __riscv64")

ADD_LIBRARY(freertos STATIC ${LIB_SRC})
SET_TARGET_PROPERTIES(freertos PROPERTIES LINKER_LANGUAGE C)
TARGET_LINK_LIBRARIES(freertos PRIVATE hal PRIVATE fatfs)

TARGET_INCLUDE_DIRECTORIES(freertos PUBLIC ${LIB_INC})